# Slot-Game-Detector

./: CMakeLists.txt  README.md
include/: detector.h  process.h  selector.h  utils.h
src/: Slot_Detector.sln  detector.cpp  main.cpp  selector.cpp  utils.cpp
src/Detector/: Detector.vcxproj  Detector.vcxproj.filters  main.cpp
src/Detector/App/: application.cpp  application.h
src/Detector/Data/: detect_list.cpp  detect_list.h  detect_parameters.h  save_data.cpp  save_data.h
src/Detector/Logic/: choise_logic.h  detect_logic.cpp  detect_logic.h
src/Detector/Logic/Detect_Logic_Basic/: detect_logic_basic.cpp  detect_logic_basic.h
src/Detector/Logic/Detector/: detector.cpp  detector.h
src/Detector/Widget/: debug_window.cpp  debug_window.h
src/Opencv_Track_Window/: Opencv_Track_Window.cpp  Opencv_Track_Window.vcxproj  Opencv_Track_Window.vcxproj.filters
src/Selector/: Selector.vcxproj  Selector.vcxproj.filters  main.cpp  selector.cpp  selector.h
src/TemplateCSV/: TemplateCSV.vcxproj  main.cpp
src/common/: process.h  utils.cpp  utils.h
